Mon, 5 Dec 2022 16:59:52 +0900 (1d670b15e)
BUILD: include generated major/minor/micro version in gnunet_config.h - Martin Schanzenbach

Mon, 5 Dec 2022 13:15:09 +0900 (6ccf51adc)
BUILD: Improve extractor handling. Removed platform.h from include - Martin Schanzenbach

Sun, 4 Dec 2022 23:26:25 +0900 (395bc9345)
Large refactor in order to restore some sanity with respect to private defines used in headers - Martin Schanzenbach

Sun, 4 Dec 2022 22:01:23 +0900 (3f0d91045)
BUILD: Remove static_assert check - Martin Schanzenbach

Sun, 4 Dec 2022 21:53:26 +0900 (a0914a0ad)
MYSQL: Improve header includes with respect to compat handling - Martin Schanzenbach

Sun, 4 Dec 2022 19:35:42 +0900 (38e77d7ab)
UTIL: Allow only inlcusion of util glib-style. - Martin Schanzenbach

Sun, 4 Dec 2022 16:47:17 +0900 (292cefa2a)
BUILD: Attempt to disentable platform.h, gnunet_common.h and gnunet_private_config.h insanity - Martin Schanzenbach

Sun, 4 Dec 2022 15:01:11 +0900 (cbe225ddc)
BUILD: Move gnunet_config.h to gnunet_private_config.h and add new, partially generated gnunet_config.h - Martin Schanzenbach

Thu, 1 Dec 2022 18:32:23 +0900 (de5949640)
BUILD: Improve platform-specific includes - Martin Schanzenbach

Wed, 23 Nov 2022 13:12:37 +0100 (7922fe165)
typo - Christian Grothoff

Wed, 23 Nov 2022 13:10:07 +0100 (28a4f4e5d)
add function to compute channel name for notifications - Christian Grothoff

Tue, 22 Nov 2022 15:38:22 +0100 (bf175e5d2)
modernize datastore postgres implementation - Christian Grothoff

Tue, 22 Nov 2022 15:21:50 +0100 (5ffa64ed1)
modernize namecache postgres implementation - Christian Grothoff

Tue, 22 Nov 2022 15:15:53 +0100 (7299f45d9)
modernize datacache postgres implementation - Christian Grothoff

Mon, 21 Nov 2022 17:08:39 +0100 (d237b33a4)
modernize namestore postgres plugin, a bit - Christian Grothoff

Sun, 20 Nov 2022 20:27:49 +0900 (9ee83b68e)
NAMESTORE: Add recordline format for zone import and display - Martin Schanzenbach
