@@ -1,3 +1,13 @@
+Thu, 8 Dec 2022 15:11:49 +0900 (3889a387e)
+BUILD: Add some helper scripts for release maintenance
+
+by: Martin Schanzenbach
+
+Tue, 6 Dec 2022 22:41:18 +0900 (6bebc94d2)
+BUILD: Remove unused header from pkgconfig directory.
+
+by: Martin Schanzenbach
+
 Mon, 5 Dec 2022 16:59:52 +0900 (1d670b15e)
 BUILD: include generated major/minor/micro version in gnunet_config.h - Martin Schanzenbach
 
